change the architecture

--- a/awesomeProject1/go-clean-template/docker-compose.yml
+++ b/awesomeProject1/go-clean-template/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   app:
     build: .
-    container_name: app
+    container_name: user
     image: app
     environment:
       PG_URL: 'postgres://user:pass@postgres:5432/postgres'
