--- a/awesomeProject1/go-clean-template/Dockerfile
+++ b/awesomeProject1/go-clean-template/Dockerfile
@@ -10,7 +10,7 @@ COPY --from=modules /go/pkg /go/pkg
 COPY . /app
 WORKDIR /app
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-    go build -tags migrate -o /bin/app ./cmd/app
+    go build -tags migrate -o /bin/user ./cmd/user
 
 # Step 3: Final
 FROM scratch
