changed the architecture + added jwt verification

--- a/awesomeProject1/go-clean-template/config/blockchain/config.yml
+++ b/awesomeProject1/go-clean-template/config/blockchain/config.yml
@@ -12,3 +12,7 @@ logger:
 postgres:
   pool_max: 2
   url : 'postgres://postgres:postgres@localhost:5432/postgres'
+
+jwt:
+  secret_key: 'superSecretKey'
+  access_token_ttl: 900
