--- a/awesomeProject1/go-clean-template/Dockerfile
+++ b/awesomeProject1/go-clean-template/Dockerfile
@@ -1,21 +1,15 @@
-# Step 1: Modules caching
-FROM golang:1.17.1-alpine3.14 as modules
-COPY go.mod go.sum /modules/
-WORKDIR /modules
-RUN go mod download
+# Use the official Golang image as a parent image
+FROM golang:1.17
 
-# Step 2: Builder
-FROM golang:1.17.1-alpine3.14 as builder
-COPY --from=modules /go/pkg /go/pkg
-COPY . /app
+# Set the working directory inside the container
 WORKDIR /app
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-    go build -tags migrate -o /bin/user ./cmd/user
 
-# Step 3: Final
-FROM scratch
-COPY --from=builder /app/config /config
-COPY --from=builder /app/migrations /migrations
-COPY --from=builder /bin/app /app
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-CMD ["/app"]
+# Copy the local package files to the container's workspace
+COPY ./cmd/auth /app
+
+# Build the binary
+RUN go build -o  ./cmd/auth/main.go
+
+
+# Run the binary
+CMD ["./"]
