--- a/awesomeProject1/go-clean-template/docker-compose.yml
+++ b/awesomeProject1/go-clean-template/docker-compose.yml
@@ -1,39 +1,56 @@
 version: '3.9'
 services:
 
-  postgres:
-    container_name: postgres
-    image: postgres
-    volumes:
-      - pg-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: 'postgres'
-      POSTGRES_PASSWORD: 'postgres'
-      POSTGRES_DB: 'postgres'
-    ports:
-      - 5432:5432
+#  postgres:
+#    container_name: postgres
+#    image: postgres
+#    volumes:
+#      - pg-data:/var/lib/postgresql/data
+#    environment:
+#      POSTGRES_USER: 'postgres'
+#      POSTGRES_PASSWORD: 'postgres'
+#      POSTGRES_DB: 'postgres'
+#    ports:
+#      - 5432:5432
 
-  app:
-    build: .
-    container_name: user
-    image: app
+  jaeger:
+    container_name: jaeger
+    image: jaegertracing/all-in-one:1.45
     environment:
-      PG_URL: 'postgres://user:pass@postgres:5432/postgres'
-      RMQ_URL: 'amqp://guest:guest@rabbitmq:5672/'
+      - COLLECTOR_ZIPKIN_HTTP_PORT=:9411
+      - COLLECTOR_OTLP_ENABLED=true
     ports:
-      - 8080:8080
-    depends_on:
-      - postgres
-      - rabbitmq
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 14268:14268
+      - 14269:14269
+      - 14250:14250
+      - 9411:9411
+      - 4317:4317
+      - 4318:4318
 
-  integration:
-    build:
-      context: .
-      dockerfile: integration-test/Dockerfile
-    container_name: integration
-    image: integration
-    depends_on:
-      - app
+#  app:
+#    build: .
+#    container_name: user
+#    image: app
+#    environment:
+#      PG_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
+#    ports:
+#      - 8081:8081
+#    depends_on:
+#      - postgres
+#
+#
+#  integration:
+#    build:
+#      context: .
+#      dockerfile: integration-test/Dockerfile
+#    container_name: integration
+#    image: integration
+#    depends_on:
+#      - app
 
 volumes:
   pg-data:
