--- a/awesomeProject1/go-clean-template/config/blockchain/config.yml
+++ b/awesomeProject1/go-clean-template/config/blockchain/config.yml
@@ -16,3 +16,6 @@ postgres:
 jwt:
   secret_key: 'superSecretKey'
   access_token_ttl: 900
+
+blockchain:
+  genesis_address: "13MAGqpqLKDCv96g9CHLFeL2rFLuCkTYHR"
