--- a/awesomeProject1/go-clean-template/config/user/config.yml
+++ b/awesomeProject1/go-clean-template/config/user/config.yml
@@ -12,3 +12,8 @@ logger:
 postgres:
   pool_max: 2
   url : 'postgres://postgres:postgres@localhost:5432/postgres'
+
+jwt:
+  secret_key: 'superSecretKey'
+  access_token_ttl: 900
+  refresh_token_ttl: 3600
