--- a/awesomeProject1/go-clean-template/config/auth/config.yml
+++ b/awesomeProject1/go-clean-template/config/auth/config.yml
@@ -25,3 +25,10 @@ nats:
   consumer:
     topics:
       - "user-verification"
+
+transport:
+  user:
+    host: http://127.0.0.1:8080
+    timeout: 5s
+  userGrpc:
+    host: localhost:9090
