--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -1,4 +1,7 @@
 DISABLE_SWAGGER_HTTP_HANDLER=true
 GIN_MODE=release
 PG_URL=postgres://postgres:postgres@localhost:5432/postgres
-RMQ_URL=amqp://guest:guest@localhost:5672/
+NATS_URL=nats://localhost:4222
+JAEGER_URL=localhost:6831
+USER_TRANSPORT_URL=http://127.0.0.1:8080
+USER_GRPC_URL=localhost:9090
