--- a/blockchain/config/auth/config.yml
+++ b/blockchain/config/auth/config.yml
@@ -19,7 +19,7 @@ jwt:
   refresh_token_ttl: 3600
 
 nats:
-  server: "nats://localhost:4222"
+  servers: "nats://localhost:4222"
   producer:
     topic: "user-verification"
   consumer:
@@ -28,7 +28,10 @@ nats:
 
 transport:
   user:
-    host: http://127.0.0.1:8080
+    host: http://localhost:8080
     timeout: 5s
   userGrpc:
     host: localhost:9090
+
+jaeger:
+  url: 'localhost:6831'
