--- a/blockchain/docker-compose.yml
+++ b/blockchain/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3.9'
-services:
-
+#version: '3.9'
+#services:
+#
 #  postgres:
 #    container_name: postgres
 #    image: postgres
@@ -12,45 +12,127 @@ services:
 #      POSTGRES_DB: 'postgres'
 #    ports:
 #      - 5432:5432
-
-  jaeger:
-    container_name: jaeger
-    image: jaegertracing/all-in-one:1.45
-    environment:
-      - COLLECTOR_ZIPKIN_HTTP_PORT=:9411
-      - COLLECTOR_OTLP_ENABLED=true
-    ports:
-      - 6831:6831/udp
-      - 6832:6832/udp
-      - 5778:5778
-      - 16686:16686
-      - 14268:14268
-      - 14269:14269
-      - 14250:14250
-      - 9411:9411
-      - 4317:4317
-      - 4318:4318
-
+#
+#  jaeger:
+#    container_name: jaeger
+#    image: jaegertracing/all-in-one:1.45
+#    environment:
+#      - COLLECTOR_ZIPKIN_HTTP_PORT=:9411
+#      - COLLECTOR_OTLP_ENABLED=true
+#    ports:
+#      - 6831:6831/udp
+#      - 6832:6832/udp
+#      - 5778:5778
+#      - 16686:16686
+#      - 14268:14268
+#      - 14269:14269
+#      - 14250:14250
+#      - 9411:9411
+#      - 4317:4317
+#      - 4318:4318
+#
 #  app:
 #    build: .
 #    container_name: user
 #    image: app
 #    environment:
-#      PG_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
+#      PG_URL: 'postgres://postgres:postgres@172.21.0.1/postgres'
 #    ports:
 #      - 8081:8081
 #    depends_on:
 #      - postgres
-#
-#
-#  integration:
-#    build:
-#      context: .
-#      dockerfile: integration-test/Dockerfile
-#    container_name: integration
-#    image: integration
-#    depends_on:
-#      - app
+
+version: "3"
+
+services:
+
+
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+
+  nats:
+    image: nats:latest
+    ports:
+      - "4222:4222"
+
+
+
+  nats-streaming:
+    image: nats-streaming:latest
+    ports:
+      - "8222:8222" # NATS Streaming HTTP monitoring interface
+
+
+
+  jaeger:
+      container_name: jaeger
+      image: jaegertracing/all-in-one:1.45
+      environment:
+        - USER_TRANSPORT_URL=172.21.0.1:8080
+        - USER_GRPC_URL=172.21.0.1:9090
+        - JAEGER_URL=172.21.0.1:6831
+        - COLLECTOR_ZIPKIN_HTTP_PORT=:9411
+        - COLLECTOR_OTLP_ENABLED=true
+      ports:
+        - 6831:6831/udp
+        - 6832:6832/udp
+        - 5778:5778
+        - 16686:16686
+        - 14268:14268
+        - 14269:14269
+        - 14250:14250
+        - 9411:9411
+        - 4317:4317
+        - 4318:4318
+
+
+
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
+  auth:
+    build: .
+    container_name: auth
+    image: auth
+    environment:
+      PG_URL: 'postgres://postgres:postgres@172.21.0.1/postgres'
+    ports:
+      - 8082:8082
+    depends_on:
+      - postgres
+      - nats
+      - jaeger
+
+
+
+  blockchain:
+    build: .
+    container_name: blockchain
+    image: blockchain
+    environment:
+      PG_URL: 'postgres://postgres:postgres@172.21.0.1/postgres'
+    ports:
+      - 8081:8081
+    depends_on:
+      - postgres
+      - jaeger
+
+  user:
+    build: .
+    container_name: user
+    image: user
+    environment:
+      PG_URL: 'postgres://postgres:postgres@172.21.0.1/postgres'
+    ports:
+      - 8080:8080
+
 
 volumes:
   pg-data:
