docker compose fix

--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -5,3 +5,4 @@ NATS_URL=nats://localhost:4222
 JAEGER_URL=localhost:6831
 USER_TRANSPORT_URL=http://127.0.0.1:8080
 USER_GRPC_URL=localhost:9090
+REDIS_URL=localhost:6379
