Pre final version

--- a/blockchain/Dockerfile-user
+++ b/blockchain/Dockerfile-user
@@ -11,6 +11,6 @@ RUN go mod download
 
 COPY .. .
 EXPOSE 8080
-RUN go build ./cmd/app/main.go
+RUN go build ./cmd/user/main.go
 
-CMD ["go", "run", "./cmd/app/main.go"]
+CMD ["go", "run", "./cmd/user/main.go"]
