--- a/blockchain/Makefile
+++ b/blockchain/Makefile
@@ -13,62 +13,44 @@ help: ## Display this help screen
 	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
 
 compose-up: ### Run docker-compose
-	docker-compose up --build -d postgres rabbitmq && docker-compose logs -f
+	docker-compose up
 .PHONY: compose-up
 
-compose-up-integration-test: ### Run docker-compose with integration test
-	docker-compose up --build --abort-on-container-exit --exit-code-from integration
-.PHONY: compose-up-integration-test
 
-compose-down: ### Down docker-compose
-	docker-compose down --remove-orphans
-.PHONY: compose-down
+swag-v1-auth: ### swag init for auth service
+	 cd internal/auth/controller/http/v1 && swag init -g ../../../../../cmd/auth/main.go -o  ../../../../../docs/auth
+.PHONY: swag-v1-auth
 
-swag-v1: ### swag init
-	swag init -g ../../../../../cmd/auth/main.go -o  ../../../../../docs/auth
-.PHONY: swag-v1
+swag-v1-user: ### swag init for user service
+	 cd internal/user/controller/http/v1 && swag init -g ../../../../../cmd/app/main.go -o  ../../../../../docs/user
+.PHONY: swag-v1-user
 
-run: swag-v1 ### swag run
-	go mod tidy && go mod download && \
-	DISABLE_SWAGGER_HTTP_HANDLER='' GIN_MODE=debug CGO_ENABLED=0 go run -tags migrate ./cmd/app
-.PHONY: run
-
-docker-rm-volume: ### remove docker volume
-	docker volume rm go-clean-template_pg-data
-.PHONY: docker-rm-volume
+swag-v1-blockchain: ### swag init for blockchain service
+	 cd internal/blockchain/controller/http/v1 && swag init -g ../../../../../cmd/blockchain/main.go -o  ../../../../../docs/blockchain
+.PHONY: swag-v1-blockchain
 
 linter-golangci: ### check by golangci linter
-	golangci-lint run
+	golangci-lint run --fix
 .PHONY: linter-golangci
 
-linter-hadolint: ### check by hadolint linter
-	git ls-files --exclude='Dockerfile*' --ignored | xargs hadolint
-.PHONY: linter-hadolint
+mockery-blockchain: ### create mock for blockchain
+	mockery --name ChainRepo --dir internal/blockchain/usecase --output internal/blockchain/mocks
+.PHONY: mockery-blockchain
 
-linter-dotenv: ### check by dotenv linter
-	dotenv-linter
-.PHONY: linter-dotenv
+test-blockchain: ### run test
+	cd internal/blockchain/usecase && go test
+.PHONY: test-blockchain
 
-test: ### run test
-	go test -v -cover -race ./internal/...
-.PHONY: test
 
-integration-test: ### run integration-test
-	go clean -testcache && go test -v ./integration-test/...
-.PHONY: integration-test
+docker-build-user:
+	docker build -t user -f Dockerfile-user .
+.PHONY: docker-build-user
 
-mock: ### run mockgen
-	mockgen -source ./internal/usecase/interfaces.go -package usecase_test > ./internal/usecase/mocks_test.go
-.PHONY: mock
+docker-build-auth:
+	docker build -t auth -f Dockerfile-auth .
+.PHONY: docker-build-auth
 
-migrate-create:  ### create new migration
-	migrate create -ext sql -dir migrations 'migrate_name'
-.PHONY: migrate-create
+ docker-build-blockchain:
+	docker build -t blockchain -f Dockerfile-blockchain .
+ .PHONY: docker-build-blockchain
 
-migrate-up: ### migration up
-	migrate -path migrations -database '$(PG_URL)?sslmode=disable' up
-.PHONY: migrate-up
-
-bin-deps:
-	GOBIN=$(LOCAL_BIN) go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
-	GOBIN=$(LOCAL_BIN) go install github.com/golang/mock/mockgen@latest
