--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -6,3 +6,5 @@ JAEGER_URL=localhost:6831
 USER_TRANSPORT_URL=http://127.0.0.1:8080
 USER_GRPC_URL=localhost:9090
 REDIS_URL=localhost:6379
+
+JAEGER_URL=localhost:6831;NATS_URL=nats://localhost:4222;PG_URL=postgres://postgres:postgres@localhost:5432/postgres;REDIS_URL=localhost:6379;USER_GRPC_URL=localhost:9091;USER_TRANSPORT_URL=http://127.0.0.1:8080
